--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       media="screen"
       href="css/style.css"
     />
-    <link rel="shortcut icon" href="img/fav.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/profile.png" type="image/x-icon" />
     <script defer src="js/commands.js"></script>
     <script defer src="js/inputRenderer.js"></script>
     <script defer type="module" src="js/commandParser.js"></script>
